# fennex

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_agents_article_skill.py  test_agents_brief.py  test_agents_director.py  test_agents_reviewer.py  test_agents_runner.py  test_agents_skills.py  test_agents_standalone.py  test_agents_tiers.py  test_agents_tools.py  test_api_keys.py  test_article_studio.py  test_article_tasks.py  test_articles.py  test_articles_geo.py  test_autopilot.py  test_backlink_mock_provider.py  test_backlink_models.py  test_backlink_schemas.py  test_backlink_tasks.py  test_backlinks.py  test_billing.py  test_billing_router.py  test_brand_kit.py  test_brand_voice.py  test_calendar.py  test_campaigns.py  test_content_plans.py  test_edit_model.py  test_editing_service.py  test_exchange_endpoints.py  test_exchange_schemas.py  test_exchange_service.py  test_geo_service.py  test_image_service.py  test_images.py  test_keywords.py  test_llm_service.py  (+18 more)
apps/web/: Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.ts  tsconfig.json
docs/: DEPLOYMENT.md  fennex-documentation.html  roadmap-2026-virtual-marketing-agency.md
services/crawler/: Dockerfile  pyproject.toml
services/crawler/app/: crawler.py  main.py
services/crawler/tests/: test_crawler.py
(+446 files in other folders)
